# Certified-Golden-Maximality-for-Invariant-Circle-Thresholds-in-Conservative-Twist-Maps

code_repository/: ARTIFACT_MANIFEST.tsv  CERTIFIED_UNIVERSE.json  HASHES.sha256  README.md  pyproject.toml
code_repository/docs/: CERTIFICATE_GLOSSARY.md  REFEREE_AUDIT_PROTOCOL.md  VALIDATOR_SPEC.md
code_repository/examples/: demo_adaptive_class_campaign.py  demo_adaptive_class_exhaustion_search.py  demo_adaptive_incompatibility.py  demo_adaptive_multi_class_campaign.py  demo_adaptive_residue_crossing.py  demo_adaptive_support_core_neighborhood.py  demo_adaptive_tail_aware_neighborhood.py  demo_adaptive_tail_coherence.py  demo_adaptive_tail_stability.py  demo_analytic_torus_validation.py  demo_asymptotic_upper_ladder_audit.py  demo_branch_certified_limit_control.py  demo_certified_tail_modulus_control.py  demo_challenger_pruning.py  demo_chart_threshold_linkage.py  demo_class_campaign.py  demo_class_exhaustion_screen.py  demo_convergent_family_limit_control.py  demo_critical_surface_bridge.py  demo_crossing_certificate.py  demo_crossing_to_hyperbolic_bridge.py  demo_crossing_window.py  demo_edge_class_weighted_golden_rate_control.py  demo_eta_challenger_comparison.py  demo_eta_comparison.py  demo_evidence_weighted_class_exhaustion_search.py  demo_fixed_point_enclosure_and_splitting.py  demo_global_transport_potential_control.py  demo_golden_aposteriori_validator.py  demo_golden_lower_neighborhood_stability.py  demo_golden_recurrence_rate_control.py  demo_golden_supercritical_continuation.py  demo_golden_supercritical_localization.py  demo_golden_upper_support_audit.py  (+58 more)
(+348 files in other folders)
